--- a/main.html
+++ b/main.html
@@ -11,6 +11,36 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<section>
+	<table>
+		<tr>
+			<th>Roll numbers</th>
+			<th>Names</th>
+		</tr>
+		<tr>
+			<td>1</td>
+			<td>Abhishek</td>
+		</tr>
+		<tr>
+			<td>2</td>
+			<td>Bhatesh</td>
+		</tr>
+	</table>
+	</section>
+
+	<section>
+		<h1>List of medias</h1>
+		<ol>
+			<li><img src="https://picsum.photos/id/123/200/300" alt="img"></li>
+			<li><video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
+					controls width=300 height=300>
+					</li>
+
+			<li><audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"
+					controls ></audio></li>
+		</ol>
+	</section>
+	
 </body>
 
 </html>
