--- a/main.html
+++ b/main.html
@@ -13,10 +13,13 @@
 
 	<section>
 	<table>
+		<thead>
 		<tr>
 			<th>Roll numbers</th>
 			<th>Names</th>
 		</tr>
+		</thead>
+		<tbody>
 		<tr>
 			<td>1</td>
 			<td>Abhishek</td>
@@ -25,6 +28,7 @@
 			<td>2</td>
 			<td>Bhatesh</td>
 		</tr>
+		</tbody>
 	</table>
 	</section>
 
@@ -32,12 +36,11 @@
 		<h1>List of medias</h1>
 		<ol>
 			<li><img src="https://picsum.photos/id/123/200/300" alt="img"></li>
-			<li><video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
+			<li> <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
 					controls width=300 height=300>
 					</li>
 
-			<li><audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"
-					controls ></audio></li>
+			<li> <audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls ></audio></li>
 		</ol>
 	</section>
 	
