--- a/main.html
+++ b/main.html
@@ -36,11 +36,14 @@
 		<h1>List of medias</h1>
 		<ol>
 			<li><img src="https://picsum.photos/id/123/200/300" alt="img"></li>
-			<li> <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
-					controls width=300 height=300>
+			<li> <video controls width=300 height=300>
+					<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+					</video>
 					</li>
 
-			<li> <audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls ></audio></li>
+			<li> <audio  controls >
+				<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/mp3">
+			</audio></li>
 		</ol>
 	</section>
 	
